<resources>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="serviceStatus">State:</string>
    <string name="location">Location:</string>
    <string name="sends">Status:</string>
    <string name="url">Address:</string>
    <string name="settings">Settings</string>
    <string name="period">Sampling GPS</string>
    <string name="succes">Successfully</string>
    <string name="error">Error: </string>
    <string name="Sputniki">Satellites: </string>
    <string name="GlonasFindString"> uses Glonass</string>
    <string name="NoConnection">No connection</string>
    <string name="Unknow">Unknown</string>
    <string name="NotDefined">Undefined</string>
    <string name="Sended">Status: </string>
    <string name="Adres">Address: </string>
    <string name="RepeatAuth">Reset login data</string>
    <string name="warnhash">Unable to get the key from the server. Check the connection or contact support</string>
    <string name="Settings">Settings</string>
    <string name="EqualsParameters">Equate settings</string>
    <string name="AgreeRepeatAuth">Confirm re-authorization request</string>
    <string name="ChangeAdresMonitor">This changes the monitoring address!</string>
    <string name="yes">Ok</string>
    <string name="No">Cancel</string>
    <string name="AgreeParameterEqual">Confirm equating transmission parameters and recording</string>
    <string name="TrackRecordParameterChanges">Track recording parameters will change</string>
    <string name="Running">Launched</string>
    <string name="NotRunning">Not launched</string>
    <string name="Status">Status: </string>
    <string name="Sendcount">Sent: </string>
    <string name="ErrorRecieve">Error retrieving</string>
    <string name="AuthWait">Requesting authorization; please wait…</string>
    <string name="CheckInternet">Failed to authenticate. Check your data connection.</string>
    <string name="CanNotWriteHeader">Could not save track to your memory card.</string>
    <string name="CanNotWriteEnd">Could not finish saving track to your memory card.</string>
    <string name="SendCourseChange">Change the transmission rate: </string>
    <string name="TrackCourseChange">Changing course track: </string>
    <string name="ServerError">Server Error</string>
    <string name="buffer">Buffer: </string>
    <string name="request">Requesting, please wait…</string>
    <string name="noappcode">Empty password</string>
    <string name="nokey">Authorization failed (nokey)</string>
    <string name="getkey">Authorized</string>
    <string name="getadres">Get Address</string>
    <string name="getdevice">Get device</string>
    <string name="enterchanel">Enter into channel</string>
    <string name="SimLinkButtonText">Update</string>
    <string name="addsymlink">Add link</string>
    <string name="symlink">My Links</string>
    <string name="sendnow">Send Now</string>
    <string name="message">Message</string>
    <string name="sendsupport">Report to support</string>
    <string name="about">About</string>
    <string name="abouttext">OsMoDroid is an OsMo Tracker app for Android. Using this application, you will be able to record a trip track in the harshest conditions.\developer: Denis Fokin © 2022\n\n By using this application you accept the terms of use:\nhttps://osmo.mobi/terms</string>
    <string name="send">>></string>
    <string name="cancel">Cancel</string>
    <string name="speed">Speed: km/h</string>
    <string name="auth">Authorization</string>
    <string name="nomapapp">No Maps-like application appears to be installed.</string>
    <string name="showonmap">Show on the map</string>
    <string name="chanal">Group </string>
    <string name="refresh">Update</string>
    <string name="coordinats">Location: </string>
    <string name="Distantion">Range: </string>
    <string name="Km">" km"</string>
    <string name="m">" m"</string>
    <string name="chanals">Groups</string>
    <string name="yourmessage">Your message: </string>
    <string name="sendingmessage">Sending a message</string>
    <string name="sharelink">Share</string>
    <string name="chat">Chat</string>
    <string name="messagetochat">Message to the group</string>
    <string name="copylink">Copy this link</string>
    <string name="openinbrowser">Open in browser</string>
    <string name="exitfromchanal">Leave group</string>
    <string name="createchanel">Create group</string>
    <string name="enterchanal">Join the group</string>
    <string name="chanalname">Group name</string>
    <string name="createchanal">Create a group</string>
    <string name="more">More</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="empty_channels">On this screen, you can watch the group in which you entered. To start using groups, use the context menu.</string>
    <string name="monitoring_settings">Monitoring settings</string>
    <string name="send_frequency">Send frequency</string>
    <string name="meters_must_move_at_least_this_far_to_send_location_update">Meters – Must move at least this far to send location send</string>
    <string name="send_distance">Send distance</string>
    <string name="degrees">Degrees</string>
    <string name="course_deviation">Course deviation</string>
    <string name="kilometers_per_hour_course">km/h. If the speed is lower, then the `course deviation` not processed</string>
    <string name="kilometers_per_hour_speed">km/h. If the speed is lower, the coordinate is not sent</string>
    <string name="speed_trigger_for_course_deviation">Speed Trigger for Course Deviation</string>
    <string name="acceptable_location_accuracy_horizontal_dilution_of_precision_location_signals_less_accurate_than_this_higher_numbers_will_not_be_sent_as_updates_">Acceptable Location Accuracy (Horizontal Dilution of Precision). Location signals less accurate than this (higher numbers) will not be sent as updates.</string>
    <string name="maximum_hdop">Maximum HDOP</string>
    <string name="minimum_send_speed">Minimum send speed</string>
    <string name="mode_and">Mode AND</string>
    <string name="if_checked_all_conditions_speed_time_distance_must_be_met_to_send_a_location_update_if_unchecked_any_condition_may_cause_an_update_">If checked, ALL conditions (speed, time, distance) must be met to send a location update. If unchecked, any condition may cause an update.</string>
    <string name="transfer_unsent">Transfer unsent</string>
    <string name="useful_with_unstable_internet_connections_may_use_more_data_">Useful with unstable Internet connections. May use more data.</string>
    <string name="recorded_tracks_are_stored_on_the_memory_card_by_default_sdcard_osmodroid_">Recorded tracks are stored on the memory card (by default /sdcard/OsMoDroid/)</string>
    <string name="record_track">Record track</string>
    <string name="record_settings">Record settings</string>
    <string name="milliseconds_how_often_to_save_location">Milliseconds – How often to save location</string>
    <string name="meters_must_move_at_least_this_far_to_save_new_location">Meters – Must move at least this far to save new location</string>
    <string name="meters">Meters</string>
    <string name="acceptable_location_accuracy">Acceptable Location Accuracy</string>
    <string name="minimum_speed_to_save_">Minimum speed to save</string>
    <string name="if_checked_all_conditions_speed_time_distance_must_be_met_to_save_a_location_update_if_unchecked_any_condition_may_cause_an_update_">If checked, ALL conditions (speed, time, distance) must be met to save a location update. If unchecked, any condition may cause an update.</string>
    <string name="memory_card_path">Memory card path</string>
    <string name="notification">Notification</string>
    <string name="vibrate_on_signal_loss">Vibrate on signal loss</string>
    <string name="vibrate_when_internet_or_gps_signal_is_lost">Vibrate when Internet or GPS signal is lost</string>
    <string name="milliseconds">Milliseconds</string>
    <string name="vibration_time_interval">Vibration time interval</string>
    <string name="sound_on_signal_loss">Sound on signal loss</string>
    <string name="play_a_sound_when_internet_or_gps_signal_is_lost">Play a sound when Internet or GPS signal is lost</string>
    <string name="period_of_gps_unavailability">Period of GPS unavailability</string>
    <string name="sound_when_sending">Sound when sending</string>
    <string name="play_a_sound_when_sending_each_location_update">Play a sound when sending each location update</string>
    <string name="disable_notification">Disable notification</string>
    <string name="do_not_use_android_notifications">Do not use Android Notifications</string>
    <string name="notify_with_monitoring">Status of monitoring</string>
    <string name="status_notification_for_monitoring_your_devices">Notification of the status of monitoring group members</string>
    <string name="alarm_when_device_acceleration_exceeds_a_threshold">Alarm when device acceleration exceeds a threshold</string>
    <string name="acceleration_alarm">Acceleration alarm</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="acceleration_to_activate_the_alarm">Acceleration to activate the alarm</string>
    <string name="enable_speech_options">Enable speech options</string>
    <string name="use_text_to_speech_tts_">Use text-to-speech (TTS)</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="speak_current_speed">Speak current speed</string>
    <string name="speak_average_speed">Speak average speed</string>
    <string name="speak_remote_commands">Speak remote commands</string>
    <string name="increases_battery_consumption">When working with the application screen will not turn on automatically</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="determine_location_by_gps_provides_best_accuracy_but_uses_more_battery_">Determine location by GPS</string>
    <string name="use_gps">Use GPS</string>
    <string name="determine_location_by_cellular_networks_and_wifi_not_very_accurate_but_easier_on_battery_">Determine location by cellular networks and WiFi</string>
    <string name="use_mobile_networks">Use Mobile Networks</string>
    <string name="launch_background_service_when_the_phone_starts_up_">Keep background service permanent</string>
    <string name="startup_at_boot">Permanent Mode</string>
    <string name="general">General</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="gps_poll_period">GPS poll period</string>
    <string name="seconds">Seconds</string>
    <string name="network_timeout">Network timeout</string>
    <string name="live_monitoring">Live monitoring</string>
    <string name="update_map_in_background">Always receive data groups</string>
    <string name="usechatnotification">Notifications for chat messages</string>
    <string name="usechatsummary">Shows notification when receive message from chat of any active group</string>
    <string name="imperial">Imperial Units</string>
    <string name="imperial_summary">Use miles, feet</string>
    <string name="smsexchange">Exchange by  SMS</string>
    <string name="sendsms">Send SMS</string>
    <string name="sendsmsnumber">Send SMS to number</string>
    <string name="sendsmsperiod">Send SMS period</string>
    <string name="getsms">Get SMS</string>
    <string name="getsmsnumber">Get SMS number</string>
    <string name="osmand">Integrate with OsmAnd (experimental)</string>
    <string name="autostartses">Auto start session after launch</string>
    <string name="startsesonrun">Start session on run</string>
    <string name="car">CAR</string>
    <string name="run">RUN</string>
    <string name="bike">CYCLE</string>
    <string name="ski">SKI</string>
    <string name="chooseway">Choose your way</string>
    <string name="walk">WALK</string>
</resources>