<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:title="@string/settings">

    
    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference android:title="@string/dark_theme" android:defaultValue="true" android:key="darktheme" />
        <EditTextPreference android:summary="@string/milliseconds" android:title="@string/gps_poll_period" android:key="refreshrate" android:defaultValue="5000"/>
        <EditTextPreference android:summary="@string/seconds" android:title="@string/network_timeout" android:key="timeout" android:defaultValue="30"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="imperial"
            android:summary="@string/imperial_summary"
            android:title="@string/imperial"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/online">
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="live"
            android:title="@string/live_monitoring"/>

                    <PreferenceScreen android:title="@string/monitoring_settings" android:dependency="live">
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="period"
                                android:numeric="integer"
                                android:summary="@string/milliseconds_how_often_to_send_location"
                                android:title="@string/send_frequency" android:defaultValue="0"/>
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="distance"
                                android:numeric="integer"
                                android:summary="@string/meters_must_move_at_least_this_far_to_send_location_update"
                                android:title="@string/send_distance" android:defaultValue="0"/>
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="bearing"
                                android:numeric="integer"
                                android:summary="@string/degrees"
                                android:title="@string/course_deviation" android:defaultValue="0"/>
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="speedbearing"
                                android:summary="@string/kilometers_per_hour_course"
                                android:title="@string/speed_trigger_for_course_deviation" android:defaultValue="5" />
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="hdop"
                                android:numeric="integer"
                                android:summary="@string/acceptable_location_accuracy_horizontal_dilution_of_precision_location_signals_less_accurate_than_this_higher_numbers_will_not_be_sent_as_updates_"
                                android:title="@string/maximum_hdop" android:defaultValue="30"/>
                            <EditTextPreference
                                android:key="speed"
                                android:title="@string/minimum_send_speed"
                                android:summary="@string/kilometers_per_hour_speed"
                                android:digits="0123456789"
                                android:inputType="number"
                                android:defaultValue="0"/>
                            <CheckBoxPreference
                            	android:key="modeAND"
                            	android:title="@string/mode_and"
                            	android:defaultValue="false"
                            	android:summary="@string/if_checked_all_conditions_speed_time_distance_must_be_met_to_send_a_location_update_if_unchecked_any_condition_may_cause_an_update_"/>
                            <CheckBoxPreference
                                android:key="usebuffer"
                                android:title="@string/transfer_unsent"
                                android:summary="@string/useful_with_unstable_internet_connections_may_use_more_data_"
                                android:defaultValue="true"/>
                    </PreferenceScreen>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/offline">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="gpx"
            android:summary="@string/recorded_tracks_are_stored_on_the_memory_card_by_default_sdcard_osmodroid_"
            android:title="@string/record_track"/>

                <PreferenceScreen android:title="@string/record_settings" android:dependency="gpx">
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="period_gpx"
                            android:numeric="integer"
                            android:summary="@string/milliseconds_how_often_to_save_location"
                            android:title="@string/send_frequency" android:defaultValue="1000"/>
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="distance_gpx"
                            android:numeric="integer"
                            android:summary="@string/meters_must_move_at_least_this_far_to_save_new_location"
                            android:title="@string/send_distance" android:defaultValue="0"/>
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="bearing_gpx"
                            android:numeric="integer"
                            android:summary="@string/degrees"
                            android:title="@string/course_deviation" android:defaultValue="0"/>
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="speedbearing_gpx"
                            android:summary="@string/kilometers_per_hour_course"
                            android:title="@string/speed_trigger_for_course_deviation" android:defaultValue="0"/>
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="hdop_gpx"
                            android:numeric="integer"
                            android:summary="@string/meters"
                            android:title="@string/acceptable_location_accuracy" android:defaultValue="30"/>
                        <EditTextPreference
                            android:digits="0123456789"
                            android:inputType="number"
                            android:key="speed_gpx"
                            android:numeric="integer"
                            android:summary="@string/kilometers_per_hour_speed"
                            android:title="@string/minimum_speed_to_save_"
                            android:defaultValue="0"/>
                        <CheckBoxPreference
                        	android:key="modeAND_gpx"
                        	android:title="@string/mode_and"
                        	android:defaultValue="false"
                        	android:summary="@string/if_checked_all_conditions_speed_time_distance_must_be_met_to_save_a_location_update_if_unchecked_any_condition_may_cause_an_update_"/>
                        <EditTextPreference
                            android:title="@string/memory_card_path"
                            android:key="sdpath"
                            />
                </PreferenceScreen>
                    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/more">

                    <PreferenceScreen android:title="@string/notification" >
                            <CheckBoxPreference
                                android:key="vibrate"
                                android:title="@string/vibrate_on_signal_loss"
                                android:summary="@string/vibrate_when_internet_or_gps_signal_is_lost"
                                android:defaultValue="false"/>
                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="vibratetime"
                                android:numeric="integer"
                                android:summary="@string/milliseconds"
                                android:title="@string/vibration_time_interval"
                                android:defaultValue="500"/>

                            <EditTextPreference
                                android:digits="0123456789"
                                android:inputType="number"
                                android:key="notifyperiod"
                                android:numeric="integer"
                                android:summary="@string/milliseconds"
                                android:title="@string/period_of_gps_unavailability"
                                android:defaultValue="60000"/>
                            <CheckBoxPreference
                                android:key="sendsound"
                                android:title="@string/sound_when_sending"
                                android:summary ="@string/play_a_sound_when_sending_each_location_update"
                                android:defaultValue="false"/>
                            
                            <CheckBoxPreference
                                android:key="silentnotify"
                                android:title="@string/disable_notification"
                                android:summary="@string/do_not_use_android_notifications"
                                android:defaultValue="false"/>
                        <CheckBoxPreference
                                android:key="statenotify"
                                android:title="@string/notify_with_monitoring"
                                android:defaultValue="false"
                                android:summary="@string/status_notification_for_monitoring_your_devices"/>
                        <CheckBoxPreference
                            android:key="chatnotify"
                            android:title="@string/usechatnotification"
                            android:summary="@string/usechatsummary"
                            android:defaultValue="true"/>

                            <CheckBoxPreference
                                android:summary="@string/alarm_when_device_acceleration_exceeds_a_threshold"
                                android:key="usealarm"
                                android:title="@string/acceleration_alarm"
                                android:defaultValue="false"/>
                            <EditTextPreference
                                android:title="@string/sensitivity"
                                android:summary="@string/acceleration_to_activate_the_alarm"
                                android:key="sensivity"
                                android:defaultValue="2"/>
                            <CheckBoxPreference
                            	android:key="usetts"
                            	android:summary="@string/enable_speech_options"
                            	android:title="@string/use_text_to_speech_tts_"
                            	android:defaultValue="false" />
                            <PreferenceCategory android:dependency="usetts" android:title="@string/tts_settings">
                                <CheckBoxPreference android:title="@string/speak_current_speed" android:key="ttsspeed"/>
                                <CheckBoxPreference android:title="@string/speak_average_speed" android:key="ttsavgspeed"/>
                                <CheckBoxPreference android:title="@string/speak_remote_commands" android:key="ttsremote"/>
                                <CheckBoxPreference
                                    android:key="playsound"
                                    android:title="@string/sound_on_signal_loss"
                                    android:summary="@string/play_a_sound_when_internet_or_gps_signal_is_lost"
                                    android:defaultValue="false"/>
                            </PreferenceCategory>
                    </PreferenceScreen>

        <CheckBoxPreference
            android:key="usewake"
            android:summary="@string/increases_battery_consumption"
            android:title="@string/keep_screen_on"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="usegps"
            android:summary="@string/determine_location_by_gps_provides_best_accuracy_but_uses_more_battery_"
            android:title="@string/use_gps"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="usenetwork"
            android:summary="@string/determine_location_by_cellular_networks_and_wifi_not_very_accurate_but_easier_on_battery_"
            android:title="@string/use_mobile_networks"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="autostart"
            android:summary="@string/launch_background_service_when_the_phone_starts_up_"
            android:title="@string/startup_at_boot"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="autostartsession"
            android:summary="@string/autostartses"
            android:title="@string/startsesonrun"
            android:defaultValue="false"/>
        <CheckBoxPreference android:key="subscribebackground" android:title="@string/update_map_in_background" android:defaultValue="false"/>
        <!--<CheckBoxPreference android:key="tcpnodelay" android:title="@string/tcp_no_delay" android:defaultValue="false"/>-->
        <!--<CheckBoxPreference android:key="tls" android:title="Use TLS Socket" android:defaultValue="false"/>-->
        
    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="osmand"
        android:title="@string/osmand"/>
    <PreferenceCategory
        android:key="smsprefcategory"
        android:title="@string/smsexchange">


    <CheckBoxPreference
        android:defaultValue="false"
        android:key="sendsms"
        android:title="@string/sendsms"/>
    <EditTextPreference
        android:dependency="sendsms"
        android:defaultValue="Default value"
        android:key="sendsmsnumber"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/sendsmsnumber"/>
    <EditTextPreference
        android:dependency="sendsms"
        android:defaultValue="300"
        android:key="smsperiod"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:digits="0123456789"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/sendsmsperiod"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="getsms"
        android:title="@string/getsms"/>
    <EditTextPreference
        android:dependency="getsms"
        android:defaultValue="Default value"
        android:key="getsmsnumber"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/getsmsnumber"/>
    </PreferenceCategory>

</PreferenceScreen>
