<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:alwaysDrawnWithCache="false"
              android:background="@android:color/transparent"
              android:descendantFocusability="blocksDescendants"
              android:orientation="vertical">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/enterchanal"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/createchanal"/>

    <ListView
        android:id="@+id/mychannelslistView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@android:color/transparent">

    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_channels"/>

</LinearLayout>
